# WALL_E

./: .gitignore  .gitmodules  Dockerfile  IMU_Ps2_nonspi_semifinal_test.ino  ParralaxControlerUMLGenerator.ipynb  README.md  api_spec_sheet.md  controller_mapping_pins.ino  docker-compose.yaml  pitch1_stabilization_1.ino.ino  test_all_4.ino
ArduinoTankBotScripts/FInal_project_Codes/: MEGA_FINAL_V3.ino  UNO_FINAL.ino  WALLE_MEGA_final.ino  WALLE_UNO_FINAL.ino
ArduinoTankBotScripts/MINI_PROJECT_1_1_AXIS_STABILIZATION/pitchstabilisingcodes/: IMU_PITCH_STABILIZATION_V2.ino  imu_pitch_stabilization.ino
ArduinoTankBotScripts/MINI_PROJECT_2_1_AXIS_STABILISATION_PARALLAX/: README.md  WALLE_MEGA_final.ino  WALLE_mega.ino  WALLE_mega_working.ino  WALL_E_MEGA_1.ino  WALL_E_UNO.ino  WALL_E_UNO_working.ino  WALL_E_adaptive_UNO.ino  bt_controller.py  payload_sensitivity.py  test1_motors.ino  test2_servo_imu.ino  test3_stabilizer_only.ino  test4_full_system.ino  validate_controllers.py
ArduinoTankBotScripts/MOTOR_TESTING_CODES/: 2-BELT_MOTOR_BRING_UP.ino  MOTOR_BRING_UP.ino  Motor_Speed_Dir_TEST.ino  test2_incorportating_pitchcontrolbehaviour.ino
ArduinoTankBotScripts/flashhc05/: flashhc05.ino
MINI_PROJECT_1_1_AXIS_STABILIZATION/ps2sidecode/: ps2_controllerto_tread_bot.ino
MOTOR_TESTING_CODES/: i2c-as5600L_mpu6050_uno.ino  test1.ino  wiring_map.txt
PS5_control_test/: CMakeLists.txt  compile_commands.json  platformio.ini
PS5_control_test/src/: main.cpp
ParallaxEEPROMFlash/: .gitignore  FlashGraphicsToEEPROM.c  TestGraphicsReadFromEEPROM.c  makefile  pixelArtSampleData.h
ParralaxController/: .clangd  .gitignore  compileAndUpload.sh  compile_commands.json  main.cpp  makefile
ParralaxController/include/: JoyStickPublisher.h  SPIRendering.h  TankStatusBTAdopt.h
ParralaxController/include/Graphics/: AGraphicsObject.h  ARendederSubcriber.h  ARendederSubscriber.h  AsyncTankStatusGraphics.h  IRendererScreenImpl.h  NcursesScreenImpl.h  PixelDataFrame.h  RotatePixelArt.h  SpiScreenImpl.h  pixelArtSampleData.h
ParralaxController/include/Propellor/: FlexSpinSDWrite.h  PrintStatusSubscriber.h  SPI.h  ST7796S.h  font.h  hc05.h
ParralaxController/include/TankStatus/: ABytePublisher.h  ATankStatusPublisher.h  BTUSART.h  IOutImpl.h  ITankStatus.h  ITankStatusSubscriber.h  TankStatus.h
ParralaxController/lib/: TankStatus
ParralaxController/slopCodeRefrence/: GemeniExampleTFTDisplay.c
ParralaxController/src/: AGraphicsObject.c  ATankStatusPublisher.c  AsyncTankStatusGraphics.c  BluetoothSimulation.c  FlexSpinSDWrite.c  JoyStickPublisher.c  NcursesScreenImpl.c  PixelDataFrame.c  PrintStatusSubscriber.c  RenderSparseMatrix.c.bak  RotatePixelArt.c  SPIRendering.c  ST7796S.c  TankStatusBTAdopt.c  adc.c  hc05.c  main.c  main.cpp  tankStatus.c
ParralaxController/test/: TestGraphicsNoRender.c  TestPubSubTankStatus.c  TestRenderCurses.c  TestRotateSprite.c  TestTankStatus.c
ParralaxTestScripts/: .clangd  .gitignore  BlueToothSerial.c  ST7796S.c  TestHC05.c  TestJoyStick.c  adc.c  fdserial.c.bak  hco5.c  makefile  tankStatus.c  testSPIDisplay.c
ParralaxTestScripts/include/: ST7796S.h  TankStatus.h  adc.h  fdserial.h.bak  hc05.h
PythonMockServer/: udpdump.py
TankBotPIO/: compile_commands.json  platformio.ini
TankBotPIO/.cache/clangd/index/: FeedbackLoop.h.89505BC494F630E9.idx  ISR_Timer-Impl.h.276408DCFA1B506E.idx  ISR_Timer.h.BDC33EF07889EA1F.idx  ISR_Timer.hpp.5A23A50366C2B70A.idx  L829n.cpp.813F0E30C334A6B0.idx  L829n.h.02A1A3BCE9D97E65.idx  (+31 more)
TankBotPIO/include/: FeedbackLoop.h  L829n.h  Mpu6050.h  PS2Rcv.h  TimerInturruptSetup.h  config.h
TankBotPIO/lib/PS2functions/: ps2helper.cpp  ps2helper.h
TankBotPIO/src/: L829n.cpp  Mpu6050.cpp  PS2Rcv.cpp  main.cpp
TankBotWebUI/: Makefile  Program.cs  TankBotWebUI.csproj  TankBotWebUI.http  docker-compose.yml  makefile
TankBotWebUI/Html_Build/: webui_tankstatus.html
TankBotWebUI/Properties/: launchSettings.json
TankBotWebUI/src/: tankstatus.cs
TankBotWebUI/wwwroot/: drive.html  webui_tankstatus.html
TankStatusProtocol/: CMakeLists.txt  README.md  TankStatusClass.cpp  TankStatusClass.h  shell.nix  tankstatuswrapper.cpp  testTank.py
TankStatusProtocol/TankStatusProtocol/: .clangd  CMakeLists.txt
TankStatusProtocol/TankStatusProtocol/lib/: TankStatus.c  TankStatus.h
TankStatusProtocol/lib/: TankStatus.c  TankStatus.h  TankStatusClass.cpp  TankStatusClass.h
WebSocketGateway/: .gitignore  Dockerfile  Makefile  README.md  WebSocketGateway.py  docker-compose.yml  requirements.txt
WebSocketGateway/WebSocketGateway/: .dockerignore  CMakeCache.txt  Dockerfile  cmake_install.cmake  makefile  physicalTankbot.py  requirements.txt  server.py  testTank.py
WebSocketGateway/tankstatus/: shell.nix
WebUIGodot3/: .gitignore  docker-compose.yml  dockerfile  makefile
WebUIGodot3/webui_tankstatus/: Client.cs  Cube.cs  TANKSTATUS.cs  WEBUI_TANKSTATUS.tscn  export_presets.cfg  project.godot  src  webui_tankstatus.csproj  webui_tankstatus.sln
arduino/: MEGA_FINAL_V2.ino  datasave.txt  makefile
arduino/AS5600_TEST/: AS5600_TEST.ino
arduino/MEGA_V3/: MEGA_V3.ino  MEGA_V3.ino.bak.20260506_102041  MEGA_V3dryrun.ino
arduino/MEGA_V3.bak.20260506_102100/src/: TankStatusClass
arduino/MOCK_ARDUINO_STREAMIO/: MOCK_ARDUINO_STREAMIO.ino
arduino/MOCK_UNO_PLATFORM/: MOCK_UNO_PLATFORM.ino
arduino/WALLE_UNO_FINAL/: WALLE_UNO_FINAL.ino
arduino/blink/: blink.ino
arduino/python_test_protocol/: builds  log_as5600.py  read_accel.py  test_read_encoder.py  test_write_motor.py  test_write_motor.py.save
arduino/test1_motors/: test1_motors.ino
maps/: test_map.pgm  test_map.yaml
src/wall_e_bringup/: CMakeLists.txt  package.xml
src/wall_e_bringup/config/: nav2_params.yaml  rtabmap.yaml
src/wall_e_bringup/launch/: wall_e.launch.py
src/wall_e_bringup/src/: controller_node.cpp  fake_odom.py  llama_interpreter_node.py  llama_nav_node.py  mega_bridge.cpp  mega_node.cpp  state_machine.cpp  udp_godot_bridge.py  uno_bridge.cpp  webrtc_video_bridge.py  yolo_nav_node.py
src/wall_e_bringup/urdf/: wall_e.urdf.xacro
test3/: test3.ino
(+3 files in other folders)
